--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
