--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "database.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon database.js"
-    
+    "start": "nodemon database.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +14,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7"
   }
