Leasing Services Layout

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.27.0",
