My Account Dashboard Layout

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.27.0",
